<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.RegistroPlatoFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ExtraText">
        //Creacion de un contorno para simular la franja que tiene android

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/arribaagre">

            <ImageView
                android:id="@+id/retrocesoM"
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="24dp"
                android:src="@drawable/fllecha" />

            <ImageView
                android:id="@+id/img"
                android:layout_width="60dp"
                android:layout_height="49dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="175dp"
                android:layout_marginLeft="175dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="176dp"
                android:src="@drawable/agregap" />

        </RelativeLayout>
        //Creacion del formulario que se usara para el registro de Personal

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/re_1"
            android:textAlignment="center"
            android:textColor="@color/Letras"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingLeft="15dp"
            android:text="@string/re_2"
            android:textColor="@color/Letras"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/campoN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/re_3"
            android:maxLength="40"
            android:textColor="@color/Letras"
            android:textColorHighlight="@color/Letras"
            android:textColorHint="@color/hints" />

        <EditText
            android:id="@+id/campoD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/re_4"
            android:textColorHint="@color/hints" />

        <EditText
            android:id="@+id/campoP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/re_5"
            android:textColorHint="@color/hints" />

        <EditText
            android:id="@+id/campoC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/re_6"
            android:textColorHint="@color/hints" />

        <EditText
            android:id="@+id/campoI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/re_7"
            android:textColorHint="@color/hints" />
        <EditText
            android:id="@+id/campoA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/re_8"
            android:textColorHint="@color/hints" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:text="Registrar" />
    </LinearLayout>


</FrameLayout>